--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
    
    <title>When Should I Visit&hellip;</title>
-<!--   <link rel="stylesheet" href="css/style.css">-->
-
+   <link rel="stylesheet" href="style.css">
    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-route.min.js"></script>
    <script src="js/app.js"></script>
@@ -13,18 +12,18 @@
 <body ng-app="Destinations">
    <header>
       <div id="logo">
-         <img src="http://www.visittri-cities.com/Content/tc_mp_footer_logo_retina.png"/>
+         <img src="http://proprofs-cdn.s3.amazonaws.com/images/QM/user_images/1649232/qmEurope_600.jpg"/>
       </div>
       <div id="navigation">
          <a href="#/home">Home</a>
-         <a href="#/state1">State 1</a>
-         <a href="#/state2">State 2</a>
+         <a href="#/states">States</a>
+         <a href="#/cities">Cities</a>
       </div>
    </header>
 
    <div ng-view id="content">
       <!-- content lands here -->
-   </div>   
+   </div>
 
 </body>
 </html>
