DOne wiht this Branch - Will move to styling on another branch post Commit/Merge

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body ng-app="Destinations">
    <header>
-      <div id="logo">
+      <!--div id="logo">
          <img src="http://proprofs-cdn.s3.amazonaws.com/images/QM/user_images/1649232/qmEurope_600.jpg"/>
-      </div>
+      </div-->
       <div id="navigation">
          <a href="#/home">Home</a>
          <a href="#/states">States</a>
