Starting some styling for the two Map views

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       </div>
    </header>
 
-   <div ng-view id="content">
+   <main ng-view id="content">
       <!-- content lands here -->
-   </div>
+   </main>
 
 </body>
 </html>
