HOME and STATE Views have Full Set of CSS Rules - Catch-up w/ Master - Extend CSS to CITIES View

--- a/index.html
+++ b/index.html
@@ -16,18 +16,14 @@
 </head>
     
 <body ng-app="Destinations">
-   <header>
-      <div id="navigation">
-         <a href="#/home">Home</a>
-         <a href="#/states">States</a>
-         <a href="#/cities">Cities</a>
-          <a href="#/TEST">Test</a>
-      </div>
-   </header>
-
-   <main ng-view id="content">
-      <!-- content lands here -->
-   </main>
-
+    <main ng-view id="content">
+        <!-- content lands here -->
+    </main>
+    <nav id="navigation">
+        <a href="#/home">Home</a>
+        <a href="#/states">States</a>
+        <a href="#/cities">Cities</a>
+        <a href="#/TEST">Test</a>
+    </nav>
 </body>
 </html>
